scheduler: Don't run Javascript idle tasks when there is pending input

If there is pending input, deadline.timeRemaining will return zero when
queried from within a JavaScript idle task. Because of this it's not
helpful to even start running these types of idle tasks if we already
know that there is pending input.

BUG=721773

Change-Id: I5576b1081f1efe61ad3901f68692b950163ea9e9