third_party/WebKit/Source/core/dom/ScriptedIdleTaskController.h
@@ -17,7 +17,7 @@ class ExecutionContext;
 class IdleRequestCallback;
 class IdleRequestOptions;
 
-class ScriptedIdleTaskController
+class CORE_EXPORT ScriptedIdleTaskController
     : public GarbageCollectedFinalized<ScriptedIdleTaskController>,
       public SuspendableObject {
   USING_GARBAGE_COLLECTED_MIXIN(ScriptedIdleTaskController);
